# SpaceCases

./: .env.example  .gitignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: black.yml  deploy.yml  mypy.yml  pg_format.yml  ruff.yml  workflow.yml
src/: assets.py  autocomplete.py  bot.py  database.py  environment.py  exceptions.py  leaderboard.py  logger.py  start.py
src/cogs/: admin.py  cs.py  unbox.py  user.py
src/commands/admin/: sync.py
src/commands/cs/: containers.py  item.py  open.py
src/commands/unbox/: item.py  open.py
src/commands/user/: balance.py  claim.py  close.py  inventory.py  leaderboard.py  ranking.py  register.py  sell.py  transfer.py
src/sql/: add_item_to_inventory.sql  balance.sql  change_balance.sql  claim.sql  close.sql  count_users.sql  does_user_exist.sql  init.sql  register.sql  try_deduct_balance.sql
src/sql/init/: create_users_table.sql
src/sql/inventory/: add_skin.sql  add_sticker.sql  capacity.sql  get_inventory.sql  get_inventory_check_exist.sql  get_item.sql  get_skin.sql  get_sticker.sql  get_user_skins.sql  get_user_stickers.sql  lock_skins.sql  lock_stickers.sql
src/ui/embed/: __init__.py  exception.py  paginated_embed.py  yes_no.py
src/util/: autocomplete.py  embed.py  types.py
src/util/embed/: __init__.py  general.py  item_viewer.py  yes_no.py
