[project]
name = "spacecases"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "asyncpg == 0.30.0",
    "asyncpg-stubs == 0.30.0",
    "discord.py == 2.4.0",
    "marisa-trie == 1.2.1",
    "python-dotenv == 1.0.1",
    "requests == 2.32.3",
    "spacecases-common == 0.13.1",
    "types-requests == 2.32.0.20241016",
    "ruff == 0.8.4",
    "mypy == 1.14.0"
]

[tool.mypy]
exclude = [
    "build",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "marisa_trie.*"
ignore_missing_imports = true
